// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the button 1`] = `
<div>
  <button
    class="button"
  >
    Click me
  </button>
</div>
`;

exports[`Should render the secondary button 1`] = `
<div>
  <button
    class="button button--secondary"
  >
    Click me
  </button>
</div>
`;
